# quake-style-engine

./: .gitignore  CMakeLists.txt  README.md
demos/engine-creation/: CMakeLists.txt  main.c
rendering/: CMakeLists.txt  glcore.c
rendering/include/: glcore.h
